...
    attributedPlaceholder.setFont(UIFont.appleSDGothicNeo(size: 18, weight: .medium))
    attributedPlaceholder.setColor(UIColor.assetColor(.co_848894))
    attributedPlaceholder.setLetterSpacing(-0.09)
    $0.attributedPlaceholder = attributedPlaceholder
    $0.font = UIFont.appleSDGothicNeo(size: 18, weight: .medium)
    $0.textColor = UIColor.assetColor(.co_2b3034)
    $0.accessibilityIdentifier = "이름 입력란"
  }
  
  lazy var clearButton = UIButton().then {
    $0.setImage(UIImage.assetImage(.onboarding_clear), for: .normal)
  }
  
...
    $0.layer.cornerRadius = 13
    $0.layer.borderWidth = 1
    $0.layer.borderColor = UIColor.clear.cgColor
  }
  
  lazy var errorLabel = UILabel().then {
    $0.text = "한글 또는 영문으로 입력해주세요"
    $0.font = UIFont.appleSDGothicNeo(size: 12, weight: .medium)
    $0.textColor = UIColor.assetColor(.co_ee2440)
    $0.isHidden = true
  }
  
  lazy var stackView = UIStackView().then {
...
